--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- 访问网络状态, 检测网络的可用性. -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!--读写权限-->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEM"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- 读写权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEM" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".app.MyApplication"
         android:allowBackup="true"
@@ -26,13 +27,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.NonetActivity" android:launchMode="singleTop"/>
+        <activity
+            android:name=".activity.NonetActivity"
+            android:launchMode="singleTop" />
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".activity.LoginActivity"
+        <activity
+            android:name=".activity.LoginActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.RegisterActivity"
+            android:launchMode="singleTask" />
+        <activity android:name=".activity.CollectActivity"
             android:launchMode="singleTask"/>
-        <activity android:name=".activity.RegisterActivity"
+        <activity android:name=".activity.AttentionActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".activity.CardActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".activity.NoticeActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".activity.JifenActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".activity.TaskActivity"
+            android:launchMode="singleTask"/>
+        <activity android:name=".activity.SettingActivity"
             android:launchMode="singleTask"></activity>
     </application>
 
