--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     <!-- 读写权限 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEM" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
     <application
         android:name=".app.MyApplication"
         android:allowBackup="true"
@@ -39,20 +40,30 @@
         <activity
             android:name=".activity.RegisterActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".activity.CollectActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.AttentionActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.CardActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.NoticeActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.JifenActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.TaskActivity"
-            android:launchMode="singleTask"/>
-        <activity android:name=".activity.SettingActivity"
+        <activity
+            android:name=".activity.CollectActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.AttentionActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.CardActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.NoticeActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.JifenActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.TaskActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".activity.SettingActivity"
+            android:launchMode="singleTask" />
+        <activity android:name=".activity.FaceActivity"
             android:launchMode="singleTask"></activity>
+
     </application>
 
 </manifest>
