--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         ndk {
             abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
         }
+
     }
 
     buildTypes {
@@ -64,4 +65,7 @@ dependencies {
     implementation 'com.github.xiaohaibin:XBanner:1.6.1'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation project(':arclibrary')
+    implementation 'com.github.tyhjh:PermissionUtil:v1.0.5'
+    implementation 'com.github.tyhjh:picturePickUtil:v1.0.6'
 }
