--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.LivenessActivity"
+            android:launchMode="singleTask"/>
         <activity android:name=".activity.YindaoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -61,8 +63,6 @@
         <activity
             android:name=".activity.SettingActivity"
             android:launchMode="singleTask" />
-        <activity android:name=".activity.FaceActivity"
-            android:launchMode="singleTask"></activity>
 
         <activity android:name=".activity.WebActivity"
             android:launchMode="singleTask"/>
